<resources>
    <string name="app_name">BonjourBrowser</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>

    <string name="settings">Settings</string>
    <string name="prefInternal">Internal Browser</string>
    <string name="prefKeepOn">Keep Screen On</string>
    <string name="hideStatus">Hide System Status Bar</string>
    <string name="hideNavigation">Hide System Navigation Bar</string>
    <string name="internalResolver">Use Internal Resolver</string>
    <string name="allowDim">Enable Dim js Api</string>
    <string name="prefReset">Reset Web Storage (Restart)</string>
    <string name="loading">Loading </string>
    <string name="authentication">Authentication required</string>
    <string name="textZoom">Text Zoom</string>
    <string name="ifchange">Network changed</string>
    <string name="channel_name">DownloadNotifications</string>
    <string name="channel_description">Notifications when downloading files</string>
    <string name="download_running">Download already running</string>
    <string name="lockNet">Lock to Network</string>
    <string name="prefSSH">Browse for SSH</string>
    <string name="noHandler">no application to handle </string>
    <string name="prefVNC">Browse for VNC</string>
    <string name="download_finished">download finished</string>
    <string name="download_error">"download error: "</string>
    <string name="download_interrupted">download interrupted</string>
    <string name="showOwn">Show own services</string>
</resources>
