<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:asp="http://schemas.android.com/apk/res-auto">
    <android.support.v7.preference.SwitchPreferenceCompat
        android:id="@+id/ssh"
        android:defaultValue="true"
        android:key="ssh"
        android:title="@string/prefSSH" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:id="@+id/internal"
        android:defaultValue="false"
        android:key="internalBrowser"
        android:title="@string/prefInternal" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:id="@+id/keepOn"
        android:defaultValue="true"
        android:key="keepScreenOn"
        android:title="@string/prefKeepOn" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:id="@+id/hideStatus"
        android:defaultValue="false"
        android:key="hideStatus"
        android:title="@string/hideStatus" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:id="@+id/hideNavigation"
        android:defaultValue="false"
        android:key="hideNavigation"
        android:title="@string/hideNavigation" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:id="@+id/internalResolver"
        android:defaultValue="true"
        android:key="internalResolver"
        android:title="@string/internalResolver" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:id="@+id/lockNet"
        android:defaultValue="true"
        android:key="lockNet"
        android:title="@string/lockNet" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:id="@+id/allowDim"
        android:defaultValue="false"
        android:key="allowDim"
        android:title="@string/allowDim" />
    <de.wellenvogel.bonjourbrowser.CustomSeekBarPreference
        android:id="@+id/textZoom"
        android:defaultValue="100"
        android:key="textZoom"
        android:max="200"
        asp:min="25"
        android:title="@string/textZoom" />
    <android.support.v7.preference.Preference
        android:id="@+id/reset"
        android:defaultValue=""
        android:key="reset"
        android:title="@string/prefReset"
        />
</android.support.v7.preference.PreferenceScreen>